@@ -1,5 +1,6 @@
 2008-12-xx:
     * version 0.6.9
+    * More configurable HTML button display options
 
 2008-12-23:
     * version 0.6.8
